# terraform-fastapi-on-lambda

./: .dockerignore  .env.default  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  api.py
terraform/: locals.tf  main.tf  output.tf
terraform/modules/ecr/: data.tf  ecr.tf
terraform/modules/iam/: data.tf  main.tf  variables.tf
terraform/modules/lambda/: main.tf  output.tf  variables.tf
